<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FigurePackages.DiamondPackage.PoleRombuActivity">

    <TextView
        android:id="@+id/textView1"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pole_rombu"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Oblicz"
        android:id="@+id/buttonOblicz"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultDescriptionView"
        android:id="@+id/resultDescriptionView"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/buttonOblicz"
        android:layout_alignEnd="@+id/buttonOblicz" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45dp"
        android:textColor="@color/resultColor"
        android:text=""
        android:textAlignment="center"
        android:id="@+id/wynikView"
        android:layout_below="@+id/resultDescriptionView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wymiary_przekatnej"
        android:id="@+id/dlPrzekatnejView"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wymiary_drugiej_przekatnej"
        android:id="@+id/dlDrugiejPrzekatnejView"
        android:layout_alignTop="@+id/dlPrzekatnejView"
        android:layout_alignParentEnd="true" />

    <EditText

        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/firstDiagonalEditText"
        android:textAlignment="center"
        android:layout_below="@+id/dlPrzekatnejView"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/dlPrzekatnejView" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/secondDiagonalEditText"
        android:textAlignment="center"
        android:layout_below="@+id/dlDrugiejPrzekatnejView"
        android:layout_alignStart="@+id/dlDrugiejPrzekatnejView"
        android:layout_alignEnd="@+id/dlDrugiejPrzekatnejView"
        android:onClick="obliczPole"/>


</RelativeLayout>
