<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/pole_rombu"
        android:textSize="30dp" />

    <Button
        android:id="@+id/countAreaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstDiagonalEditText"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Oblicz" />

    <TextView
        android:id="@+id/resultDescriptionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/countAreaBtn"
        android:layout_below="@+id/countAreaBtn"
        android:layout_marginTop="38dp"
        android:text="@string/resultDescriptionView" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/resultDescriptionView"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/resultColor"
        android:textSize="45dp" />

    <TextView
        android:id="@+id/firstDiagonalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="60dp"
        android:text="@string/wymiary_przekatnej" />

    <TextView
        android:id="@+id/secondDiagonalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/firstDiagonalTextView"
        android:text="@string/wymiary_drugiej_przekatnej" />

    <EditText
        android:id="@+id/firstDiagonalEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/firstDiagonalTextView"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/firstDiagonalTextView"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/secondDiagonalEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/secondDiagonalTextView"
        android:layout_alignStart="@+id/secondDiagonalTextView"
        android:layout_below="@+id/secondDiagonalTextView"
        android:onClick="obliczPole"
        android:textAlignment="center" />


</RelativeLayout>
