<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FigurePackages.EquilateralTrianglePackage.PoleTrojkataRownobocznegoActivity">

    <TextView
        android:id="@+id/textView1"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pole_trojkata_rownobocznego"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wymiary_podstawy"
        android:id="@+id/triangleBaseView"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <EditText

        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/triangleBaseEditText"
        android:textAlignment="center"
        android:layout_below="@+id/triangleBaseView"
        android:layout_alignEnd="@+id/triangleBaseView"
        android:layout_alignStart="@+id/triangleBaseView" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Oblicz"
        android:id="@+id/buttonOblicz"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="obliczPole"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultDescriptionView"
        android:id="@+id/resultDescriptionView"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/buttonOblicz"
        android:layout_alignEnd="@+id/buttonOblicz" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="45dp"
        android:textColor="@color/resultColor"
        android:text=""
        android:textAlignment="center"
        android:id="@+id/wynikView"
        android:layout_below="@+id/resultDescriptionView"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
